{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 50,
  "lineage": "564dd2dc-4235-4d02-eda2-b1b24263ba0e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_http_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ALB accepts HTTP (80) traffic from the internet",
            "from_port": 80,
            "id": "sgrule-44219734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d74cbaa2892c7540",
            "security_group_rule_id": "sgr-0ad0f0f25af43fd61",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_https_from_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "ALB accepts HTTPS (443) traffic from the internet",
            "from_port": 443,
            "id": "sgrule-4279391667",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0d74cbaa2892c7540",
            "security_group_rule_id": "sgr-03a9cd2bbfc26d94c",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_to_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "ALB connects to Frontend on port 80",
            "from_port": 80,
            "id": "sgrule-681978954",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ca8fee962674043a",
            "security_group_rule_id": "sgr-09423518c328b86e2",
            "self": false,
            "source_security_group_id": "sg-0d74cbaa2892c7540",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.alb.aws_security_group.example",
            "module.frontend.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 22",
            "from_port": 22,
            "id": "sgrule-807130812",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0906e169861eeef81",
            "security_group_rule_id": "sgr-0e969c3de58af9f37",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.bastion.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cart_to_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cart connects to Catalogue on 8080",
            "from_port": 8080,
            "id": "sgrule-3582079817",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0435a40e2a1afaae8",
            "security_group_rule_id": "sgr-07558b00bb106ba27",
            "self": false,
            "source_security_group_id": "sg-09225204b54758730",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.cart.aws_security_group.example",
            "module.catalogue.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cart_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cart connects to Redis on 6379",
            "from_port": 6379,
            "id": "sgrule-523842701",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05cbcf87da6975ea8",
            "security_group_rule_id": "sgr-06d79c71d5d576662",
            "self": false,
            "source_security_group_id": "sg-09225204b54758730",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.cart.aws_security_group.example",
            "module.redis.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "catalogue_to_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Catalogue connects to MongoDB on 27017",
            "from_port": 27017,
            "id": "sgrule-2771934523",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c03e3d00f2ec3a6",
            "security_group_rule_id": "sgr-0c584026e9734d45f",
            "self": false,
            "source_security_group_id": "sg-0435a40e2a1afaae8",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.catalogue.aws_security_group.example",
            "module.mongo.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_cart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend connects to Cart on 8080",
            "from_port": 8080,
            "id": "sgrule-1465280392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09225204b54758730",
            "security_group_rule_id": "sgr-0354c3a6bfb5fbd1d",
            "self": false,
            "source_security_group_id": "sg-0ca8fee962674043a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.cart.aws_security_group.example",
            "module.frontend.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_catalogue",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend connects to Catalogue on 8080",
            "from_port": 8080,
            "id": "sgrule-2374535122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0435a40e2a1afaae8",
            "security_group_rule_id": "sgr-00ddfa0e3670000eb",
            "self": false,
            "source_security_group_id": "sg-0ca8fee962674043a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.catalogue.aws_security_group.example",
            "module.frontend.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_payment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend connects to Payment on 8080",
            "from_port": 8080,
            "id": "sgrule-2671092366",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02fd9c5bfe9173556",
            "security_group_rule_id": "sgr-0f538b3725c616080",
            "self": false,
            "source_security_group_id": "sg-0ca8fee962674043a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.frontend.aws_security_group.example",
            "module.payment.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_shipping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend connects to Shipping on 8080",
            "from_port": 8080,
            "id": "sgrule-192016974",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-092d9677ff4a8c2bb",
            "security_group_rule_id": "sgr-0ec05222ff9950eb9",
            "self": false,
            "source_security_group_id": "sg-0ca8fee962674043a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.frontend.aws_security_group.example",
            "module.shipping.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "frontend_to_user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Frontend connects to User on 8080",
            "from_port": 8080,
            "id": "sgrule-2216466939",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074764d79b90853a9",
            "security_group_rule_id": "sgr-086818c0434bb32d9",
            "self": false,
            "source_security_group_id": "sg-0ca8fee962674043a",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.frontend.aws_security_group.example",
            "module.user.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "payment_to_cart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Payment connects to Cart on 8080",
            "from_port": 8080,
            "id": "sgrule-4183269301",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09225204b54758730",
            "security_group_rule_id": "sgr-07e32c13e1e7908b5",
            "self": false,
            "source_security_group_id": "sg-02fd9c5bfe9173556",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.cart.aws_security_group.example",
            "module.payment.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "payment_to_rabbit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Payment connects to RabbitMQ on 5672",
            "from_port": 5672,
            "id": "sgrule-413877121",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05cb9ded90e207acb",
            "security_group_rule_id": "sgr-03583e213a2eee60a",
            "self": false,
            "source_security_group_id": "sg-02fd9c5bfe9173556",
            "timeouts": null,
            "to_port": 5672,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.payment.aws_security_group.example",
            "module.rabbit.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "payment_to_user",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Payment connects to User on 8080",
            "from_port": 8080,
            "id": "sgrule-706568646",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074764d79b90853a9",
            "security_group_rule_id": "sgr-0bcdfeafbeec34f5d",
            "self": false,
            "source_security_group_id": "sg-02fd9c5bfe9173556",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.payment.aws_security_group.example",
            "module.user.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shipping_to_cart",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Shipping connects to Cart on 8080",
            "from_port": 8080,
            "id": "sgrule-1617211601",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09225204b54758730",
            "security_group_rule_id": "sgr-06b5048b8482c7d3f",
            "self": false,
            "source_security_group_id": "sg-092d9677ff4a8c2bb",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.cart.aws_security_group.example",
            "module.shipping.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "shipping_to_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Shipping connects to MySQL on 3306",
            "from_port": 3306,
            "id": "sgrule-368505157",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-06955010ddcea673c",
            "security_group_rule_id": "sgr-018ab40f69f045926",
            "self": false,
            "source_security_group_id": "sg-092d9677ff4a8c2bb",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.mysql.aws_security_group.example",
            "module.shipping.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "user_to_mongo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "User connects to MongoDB on 27017",
            "from_port": 27017,
            "id": "sgrule-648249322",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c03e3d00f2ec3a6",
            "security_group_rule_id": "sgr-0cdb1ad2d069eed04",
            "self": false,
            "source_security_group_id": "sg-074764d79b90853a9",
            "timeouts": null,
            "to_port": 27017,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.mongo.aws_security_group.example",
            "module.user.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "user_to_redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "User connects to Redis on 6379",
            "from_port": 6379,
            "id": "sgrule-833282981",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05cbcf87da6975ea8",
            "security_group_rule_id": "sgr-06e9f64d23715581a",
            "self": false,
            "source_security_group_id": "sg-074764d79b90853a9",
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.redis.aws_security_group.example",
            "module.user.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 443",
            "from_port": 443,
            "id": "sgrule-1072148325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c2e2f5c9ae62710",
            "security_group_rule_id": "sgr-060b7fa2fc2b0a17b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.vpn.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 992",
            "from_port": 943,
            "id": "sgrule-1389544377",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c2e2f5c9ae62710",
            "security_group_rule_id": "sgr-06572dd4f55b84733",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 943,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.vpn.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 22",
            "from_port": 22,
            "id": "sgrule-4255239488",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05c2e2f5c9ae62710",
            "security_group_rule_id": "sgr-03778d02b5d2b3f86",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.vpn.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "vpn_udp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "This rule allows all traffic from internet on 1194",
            "from_port": 1194,
            "id": "sgrule-2157873379",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "security_group_id": "sg-05c2e2f5c9ae62710",
            "security_group_rule_id": "sgr-0c00d4dfda83841bf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 1194,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id",
            "module.vpn.aws_security_group.example"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-0d74cbaa2892c7540",
            "description": "This SG was used for alb",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d74cbaa2892c7540",
            "ingress": [],
            "name": "instana-sandbox-alb",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-alb",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-alb",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.bastion",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-0906e169861eeef81",
            "description": "This Sg was used for bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0906e169861eeef81",
            "ingress": [],
            "name": "instana-sandbox-bastion",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-bastion",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-bastion",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.cart",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-09225204b54758730",
            "description": "This SG was used for cart",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09225204b54758730",
            "ingress": [],
            "name": "instana-sandbox-cart",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-cart",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-cart",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.catalogue",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-0435a40e2a1afaae8",
            "description": "This SG was used for catalogue",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0435a40e2a1afaae8",
            "ingress": [],
            "name": "instana-sandbox-catalogue",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-catalogue",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-catalogue",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.frontend",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-0ca8fee962674043a",
            "description": "This SG was used for frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ca8fee962674043a",
            "ingress": [],
            "name": "instana-sandbox-frontend",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-frontend",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-frontend",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mongo",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-05c03e3d00f2ec3a6",
            "description": "This SG was used for mongo",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c03e3d00f2ec3a6",
            "ingress": [],
            "name": "instana-sandbox-mongo",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-mongo",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-mongo",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.mysql",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-06955010ddcea673c",
            "description": "This SG was used for mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06955010ddcea673c",
            "ingress": [],
            "name": "instana-sandbox-mysql",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-mysql",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-mysql",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.payment",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-02fd9c5bfe9173556",
            "description": "This SG was used for payment",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fd9c5bfe9173556",
            "ingress": [],
            "name": "instana-sandbox-payment",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-payment",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-payment",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.rabbit",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-05cb9ded90e207acb",
            "description": "This SG was used for rabbit",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cb9ded90e207acb",
            "ingress": [],
            "name": "instana-sandbox-rabbit",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-rabbit",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-rabbit",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.redis",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-05cbcf87da6975ea8",
            "description": "This SG was used for redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05cbcf87da6975ea8",
            "ingress": [],
            "name": "instana-sandbox-redis",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-redis",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-redis",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.shipping",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-092d9677ff4a8c2bb",
            "description": "This SG was used for shipping",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-092d9677ff4a8c2bb",
            "ingress": [],
            "name": "instana-sandbox-shipping",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-shipping",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-shipping",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.user",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-074764d79b90853a9",
            "description": "This SG was used for user",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-074764d79b90853a9",
            "ingress": [],
            "name": "instana-sandbox-user",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-user",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-user",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    },
    {
      "module": "module.vpn",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:427366301535:security-group/sg-05c2e2f5c9ae62710",
            "description": "This SG was used for vpn",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05c2e2f5c9ae62710",
            "ingress": [],
            "name": "instana-sandbox-vpn",
            "name_prefix": "",
            "owner_id": "427366301535",
            "revoke_rules_on_delete": false,
            "tags": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-vpn",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "tags_all": {
              "Creator": "SIVARAMAKRISHNA KONKA",
              "Deployment_Environment": "ECS",
              "Environment": "sandbox",
              "Module": "SG",
              "Name": "instana-sandbox-vpn",
              "Project_Name": "Instana",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-07bb5a9596cc6e69e"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "vpc_id"
              }
            ]
          ],
          "dependencies": [
            "data.aws_ssm_parameter.vpc_id"
          ]
        }
      ]
    }
  ]
}